fix(1145): annotation not overflow

--- a/src/app/packages/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
+++ b/src/app/packages/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
@@ -2,13 +2,20 @@
 @import 'core/less/common';
 
 :host {
+	position: absolute;
+	display: block;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
 	.context-menu-wrapper {
 		z-index: @z-index-annotation-cotext-menu;
-		position: fixed;
+		position: absolute;
 		outline: 2px dashed #27B2CF;
 		outline-offset: 10px;
 		visibility: hidden;
 		transform-origin: left top;
+		z-index: 2;
 		.remove-feature-wrapper {
 			position: absolute;
 			width: 20px;
